# SimpleETL

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.backend  LICENSE  Makefile  PLAN.md  README.md  README.ru.md  config_manager.py  config_migration.md  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.override.yml  docker-compose.yml  etl-app.py  etl_pipeline.py  main_ui.py  nginx.conf  pipeline_refactor_plan.md  simple-etl-app.py
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: db.py  main.py  settings.py
backend/app/api/v1/: __init__.py  config.py  files.py  jobs.py  websocket.py
backend/app/etl/: __init__.py  callbacks.py  extractor.py  image_utils.py  llm_processor.py  packer.py  runner.py  splitter.py
backend/app/schemas/: __init__.py  config.py  file.py  job.py  websocket.py
backend/app/services/: __init__.py  config_service.py  file_service.py  job_service.py  log_manager.py  websocket_manager.py
backend/tests/: conftest.py  test_api_v1_config.py  test_api_v1_files.py  test_api_v1_jobs_logs_outputs.py  test_capabilities.py  test_config_service.py  test_db.py  test_etl_callbacks.py  test_etl_image_utils.py  test_etl_packer.py  test_etl_runner.py  test_etl_splitter.py  test_extractor_ocr.py  test_file_service.py  test_image_utils.py  test_job_service.py  test_log_manager.py  test_main.py  test_runner_capping.py  test_schemas_config.py  test_schemas_file.py  test_schemas_job.py  test_schemas_logs_outputs.py  test_settings.py  test_websocket_manager.py  test_ws_endpoint.py
(+110 files in other folders)
